--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -212,7 +212,6 @@ input[id="searchBar"] {
       <tr>
         <th><%= lang["Preview"] %></th>
         <th><%= lang["File-Name"] %></th>
-        <th><%= lang["Is-Shared"] %></th>
         <th><%= lang["Size"] %></th>
         <th><%= lang["Created-On"] %></th>
         <th><%= lang["Actions"] %></th>
@@ -224,13 +223,10 @@ input[id="searchBar"] {
         <% let link = "/delete/" + file + `/${folder}` %>
         <% let link2 = "/rename/" + file + `/${folder}` %>
         <% let link3 = "/downloadf/" + `${folder}/` + file %>
-        <% let link4 = "/addsf/" + file + `/${folder}` %> 
-        <% let link5 = "/rmsf/" + file + `/${folder}` %> 
         <% let link6 = "/playvideo/" + `${req.user.username}/` + file + `/${folder}` %> 
         <% let link7 = "/playaudio/" + `${req.user.username}/` + file + `/${folder}` %>
         <% let link8 = "/addsubtitles/" + `${req.user.username}/` + file + `/${folder}` %>
         <% let link9 = "/rmsubtitles/" + `${req.user.username}/` + file + `/${folder}` %>
-        <% let isShared; %> 
         <% let size = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/${folder}/` + file).size / (1024 * 1024) %> 
         <% let fsDate = fs.statSync(__dirname + "/.."  + config.uploadsfolder + `${req.user.username}/${folder}/` + file).birthtime %>
         <% let creationDate = `${fsDate.getDate()}.${fsDate.getMonth() + 1}.${fsDate.getFullYear()}` %>
@@ -247,23 +243,14 @@ input[id="searchBar"] {
         <% } else { %> 
           <td>-</td>
         <% } %> 
-        <td><%= file %></td>
-        <% if (sharedFiles.includes(file)) { %>
-          <td>Yes</td>
-        <% } else { %>
-          <td>No</td>
-        <% } %>   
+        <td><%= file %></td> 
           <% if (size.toFixed(2) > 1024) { %>
             <td><%= size.toFixed(2) / 1000 %> GB </td>
           <% } else { %> 
           <td><%= size.toFixed(2) %> MB </td>
           <% } %>
           <th><%= creationDate %></th>
-          <% if (sharedFiles.includes(file)) { %> 
-          <td><a href=<%= link3%>><span class="material-icons">cloud_download</span></a>&nbsp;<a href=<%= link2 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link5 %>><span class="material-icons">stop_screen_share</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td>
-        <% } else { %>
-          <td><a href=<%= link3%>><span class="material-icons">cloud_download</span></a>&nbsp;<a href=<%= link2 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link4 %>><span class="material-icons">screen_share</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td> 
-        <% } %> 
+          <td><a href=<%= link3%>><span class="material-icons">cloud_download</span></a>&nbsp;<a href=<%= link2 %>><span class="material-icons">edit</span></a>&nbsp;<a href=<%= link %>><span class="material-icons">delete</span></a></td> 
         </tr>
         <% }) %>
     </tbody>
