--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,7 +12,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 
         body {
-            background-image: linear-gradient(to right bottom, #5d3fd3, #7e67d8, #9d8ddb, #bbb3db, #d9d9d9);
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
             width: 98vw;
             height: 98vh;
         }
@@ -28,8 +28,8 @@
         .login {
             width: 35%;
             height: 45%;
-            background-color: #0e1111;
-            border-radius: 40px;
+            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            border-radius: 50px;
             align-items: center;
             justify-content: center;
         }
@@ -37,14 +37,14 @@
         .login > h1, .login > h2 {
             font-family: 'Montserrat', sans-serif;
             text-align: center;
-            color: #5D3FD3;
+            color: #1f74cc;
             line-height: 50%;
         }
 
         .login > form > label {
             display: flex;
             justify-content: center;
-            color: #5D3FD3;
+            color: #1f74cc;
             font-family: 'Montserrat', sans-serif;
             font-size: 25px;
         }
@@ -70,11 +70,11 @@
         button {
             margin: auto;
             height: 20%;
-            width: 25%;
+            width: auto;
             display: flex;
             justify-content: center;
             align-items: center;
-            background-color: #5D3FD3;
+            background-color: #1f74cc;
             border-radius: 20px;
             font-size: 20px;
             color: white;
@@ -84,8 +84,8 @@
 
         button:hover {
             height: 21%;
-            width: 26%;
-            color:#5D3FD3;
+            width: auto + 1%;
+            color:#1f74cc;
             background-color: white;
         }
 
@@ -100,18 +100,10 @@
             }
             button {
                 margin-top: 2%;
-                width: 40%;
-            }
-            button:hover {
-                width: 41%;
             }
 
             .register {
                 margin-top: 5%;
-                width: 45%;
-            }
-            .register:hover {
-                width: 46%;
             }
         }
     </style>
