--- a/views/login.ejs
+++ b/views/login.ejs
@@ -20,10 +20,10 @@
         .flex-container {
             display: flex;
             width: 100%;
-            height: 100%;
+            height: 95%;
             flex-flow: column nowrap;
-            align-items: center;
             justify-content: center;
+            align-items: center;
         }
         .login {
             width: 35%;
@@ -92,7 +92,26 @@
        .register {
             margin-top: 2%;
         }
+
+        .footer {
+            width: 40%;
+            height: 5%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
         
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+        }
+
         @media screen and (max-width: 426px) {
             .login {
                 width: 70%;
@@ -104,6 +123,11 @@
 
             .register {
                 margin-top: 5%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
             }
         }
     </style>
@@ -130,6 +154,9 @@
         <button class="register" type="submit"><i class="fa-solid fa-user-plus"></i>&nbsp;<%= lang["Register"] %></button>
         </form>
         </div>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
     </div>
 </body>
 </html>
