--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,454 +1,158 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-
     <title><%= cloudname %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
 </head>
 <body>
     <style>
-        body {
-    background-color: #d2d3db;
-    padding: 0;
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-}
-
-.myprofile {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5px;
-    margin-right: auto;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.myprofile:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 5px;
-    margin-right: auto;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.logout {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 5px;
-    margin-top: 5px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.logout:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 5px;
-    margin-top: 5px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-
-.myfiles {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 140px;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.myfiles:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 140px;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-.admin {
-    color: white;
-    height: 60px;
-    width: 125px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 280px;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.admin:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 125px;
-    background-color: white;
-    font-size: 20px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: 280px;
-    margin-top: -60px;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-label[for="file"] {
-    color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-label[for="file"]:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.upload {
-    color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-.upload:hover {
-    color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
-
-h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
-
-}
-
-.subtitle {
-    color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-}
-
-.footer {
-            position: fixed;
-            padding: 10px 10px 0px 10px;
-            bottom: 0;
-            width: 100%;
-            /* Height of the footer*/
-            height: 40px;
-            background: black;
-            color: white;
-            font-family: "Montserrat", sans-serif;
-            text-align: center;
+    @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+    body {
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+            width: 98vw;
+            height: 98vh;
         }
 
-input[type="text"] {
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 40px;
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
-    text-align: center;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-}
+        .flex-container {
+            display: flex;
+            width: 100%;
+            height: 95%;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
+        }
 
-progress {
-	display:block;
-	width:300px;
-	height:50px;
-	margin-top: 10px;
-	background:none;
-	border: 0;
-	border-radius:50px;
-	text-align: left;
-	position:relative;
-    font-family:"Montserrat", sans-serif;
-    font-size:15px;
-    margin-left: auto;
-    margin-right: auto;
-}
-progress::-webkit-progress-bar {
-	height:40px;
-	width:250px;
-	margin: auto;
-	background-color:whitesmoke;
-	border-radius:100px;
-}
-progress::-webkit-progress-value {
-	display:inline-block;
-	background: #5D3FD3;
-	border-radius:100px;
-}
+        .upload {
+            width: 35%;
+            height: 50%;
+            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            align-items: center;
+        }
 
-h3 {
-          color: #5D3FD3;;
-          display: flex;
-          margin-top: 20px;
-          justify-content: center;
-          align-items: center;
-          font-family: "Montserrat", sans-serif;
-          font-size: large;
-      
-      }
+        .upload > h1, .upload > h2, .upload > img, .upload > h3, h3 {
+            font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+            line-height: 40%;
+        }
+        form {
+            width: 100%;
+            height: 100%;
+        }
 
-      select {
-  background-color: #5D3FD3;
-  color: white;
-  border-radius: 24px;
-  height: 60px;
-  width: 250px;
-  font-family: "Montserrat", sans-serif;
-  text-align: center;
-  font-size: 20px;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-}
+        .upload > form > label {
+            margin: 1% auto;
+            height: 10%;
+            width: 40%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+            font-family: "Montserrat", sans-serif;
+        }
 
-::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
+        .upload > form >label:hover {
+            height: 11%;
+            width: 41%;
+            color:#1f74cc;
+            background-color: white;
+        }
 
- .storage {
-    color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: 20px;
- }
-
+        select {
+            width: 41%;
+            height: 11%;
+            display: flex;
+            margin: auto;
+            text-align: center;
+            border-radius: 20px;
+            font-size: 20px;
+            background-color: #1f74cc;
+            color: white;
+        }
+        
+        progress {
+            width: 50%;
+            height: 20%;
+            display: flex;
+            margin: 0 auto -5% auto;
+        }
+        progress::-webkit-progress-bar {
+            background-color: white;
+        }
+        progress::-webkit-progress-value {
+                    background-color: #1f74cc;
+                }
     </style>
-<script>
-function _(el) {
-  return document.getElementById(el);
-}
-
-function progressBar() {
-  var file = _("file").files[0];
-  var select = _("dest").value;
-  // alert(file.name+" | "+file.size+" | "+file.type);
-  var formdata = new FormData();
-  formdata.append("file", file);
-  formdata.append("dest", select);
-  var ajax = new XMLHttpRequest();
-  ajax.upload.addEventListener("progress", progressHandler, false);
-  ajax.addEventListener("load", completeHandler, false);
-  ajax.addEventListener("error", errorHandler, false);
-  ajax.addEventListener("abort", abortHandler, false);
-  ajax.open("POST", "/upload/", true); 
-  ajax.send(formdata);
-}
-
-
-function progressHandler(event) {
-  var percent = (event.loaded / event.total) * 100;
-  _("progressBar").value = Math.round(percent);
-  _("status").innerHTML = Math.round(percent) + "%";
-}
-
-function completeHandler(event) {
-  _("status").innerHTML = event.target.responseText;
-  _("progressBar").value = 0; //wil clear progress bar after successful upload
-}
-
-function errorHandler(event) {
-  _("status").innerHTML = "Upload Failed";
-}
-
-function abortHandler(event) {
-  _("status").innerHTML = "Upload Aborted";
-}
-</script>
-
-        <form action="/logout?_method=DELETE" method="POST">
-            <button type="submit" class="logout"><%= lang["Log-Out"] %></button>
-        </form>
-        <form action="/myfiles", method="get">
-            <button type="submit" class="myfiles"><%= lang["My-Files"] %></button>
-        </form> 
-        <% if (isAdmin == true) { %>  
-        <form action="/admin", method="get">
-            <button type="submit" class="admin"><%= lang["Admin-Panel"] %></button>
-        </form> 
-        <% } %>
-        <form action="/myprofile">
-            <button type="submit" class="myprofile"><%= lang["My-Profile"] %></button>
-        </form>
-    <h1><%= cloudname %></h1>
-    <h2 class="subtitle"><%= lang["Welcome"] %>, <%= username %> <img title=<%= user.role %> src=<%= badge %> width="30" height="30"></img>!</h2> 
-    <progress value=<%= usedStorage %> max=<%= maxStorage %> ></progress>
-    <h3 class="storage"><%= usedStorage %> MB / <%= maxStorage %> MB </h3>
-    <form id="form" action="/upload/" method="post" enctype="multipart/form-data" target="_blank">
-        <select name="dest" id="dest">
+    <script>
+        function _(el) {
+          return document.getElementById(el);
+        }
+        
+        function progressBar() {
+          var file = _("file").files[0];
+          var select = _("dest").value;
+          // alert(file.name+" | "+file.size+" | "+file.type);
+          var formdata = new FormData();
+          formdata.append("file", file);
+          formdata.append("dest", select);
+          var ajax = new XMLHttpRequest();
+          ajax.upload.addEventListener("progress", progressHandler, false);
+          ajax.addEventListener("load", completeHandler, false);
+          ajax.addEventListener("error", errorHandler, false);
+          ajax.addEventListener("abort", abortHandler, false);
+          ajax.open("POST", "/upload/", true); 
+          ajax.send(formdata);
+        }
+        
+        
+        function progressHandler(event) {
+          var percent = (event.loaded / event.total) * 100;
+          _("progressBar").value = Math.round(percent);
+          _("status").innerHTML = Math.round(percent) + "%";
+        }
+        
+        function completeHandler(event) {
+          _("status").innerHTML = event.target.responseText;
+          _("progressBar").value = 0; //wil clear progress bar after successful upload
+        }
+        
+        function errorHandler(event) {
+          _("status").innerHTML = "Upload Failed";
+        }
+        
+        function abortHandler(event) {
+          _("status").innerHTML = "Upload Aborted";
+        }
+        </script>
+    <div class="flex-container">
+        <div class="upload">
+            <h1><%= cloudname %></h1>
+            <h2 class="subtitle"><%= lang["Welcome"] %>, <%= username %> <img title=<%= user.role %> src=<%= badge %> width="30" height="30"></img>!</h2>
+            <progress value=<%= usedStorage %> max=<%= maxStorage %> ></progress>
+            <h3 class="storage"><%= usedStorage %> MB / <%= maxStorage %> MB </h3>
+            <form id="form" action="/upload/" method="post" enctype="multipart/form-data" target="_blank">
+            <select name="dest" id="dest">
             <option value="/">/</option>
             <% for (let folder of folders) { %>        
               <option value=<%= folder %>><%= "/" + folder %></option>
               <% } %>
             </select>
-        <label for="file" ><span class="material-icons">upload_file</span>&nbsp;<%= lang["Upload"] %></label>
+        <label for="file" ><i class="fa-solid fa-upload"></i>&nbsp;<%= lang["Upload"] %></label>
         <input type="file" name="file" id="file" onchange="progressBar()" required hidden></input>
         <progress id="progressBar" class="progressBar" value="0" max="100"></progress>
         <h3 id="status"></h3>
     </form>
-    <footer>
-               <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-    
-    </footer>
+        </div>
+    </div>
 </body>
 </html>
