added support for mobile devices

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -172,6 +172,18 @@
            progress {
             margin-top: -5%;
            }
+           .navbar {
+            width: 100%;
+           }
+           .navbar > form > button {
+            margin: 15% auto;
+            width: 90%;
+            height: 60%;
+            font-size: 12px;
+           }
+           .navbar > form > button:hover {
+            width: 91%;
+           }
         }
     </style>
     <script>
