--- a/views/message.ejs
+++ b/views/message.ejs
@@ -1,125 +1,112 @@
 <!DOCTYPE html>
-        <html lang="en">
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="stylesheet" href="../css//style.css">
-            <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-              rel="stylesheet">
-              <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
-            <title<%= cloudname %></title>
-        <style>body {
-            background-color: #d2d3db;
-            padding: 0;
-            margin: 0;
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= cloudname %></title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+</head>
+<body>
+  <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+        body {
+            background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
+            width: 98vw;
+            height: 98vh;
         }
-        
-
-        
-        h1 {
-    color: #5D3FD3;
-    margin-top: 10%;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: xxx-large;
-
-}
-        h2 {
-            color: #5D3FD3;
-    margin-top: -5px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-        
+        .flex-container {
+            display: flex;
+            width: 100%;
+            height: 95%;
+            flex-flow: column nowrap;
+            justify-content: center;
+            align-items: center;
         }
-      
-      h3 {
-          color: #5D3FD3;;
+        .message {
+          width: 35%;
+            height: 15%;
+            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            border-radius: 50px;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+        }
+       .message > p, .message > h1 {
+          font-family: 'Montserrat', sans-serif;
+            text-align: center;
+            color: #1f74cc;
+        }
+
+      .message >  p {
+          font-size: 20px;
+        }
+
+        a:link, a:visited, a:hover, a:active {
+            color: #1f74cc;
+            text-decoration: none;
+            background-color: transparent;
+        }
+
+        button {
           display: flex;
-          margin-top: 20px;
-          justify-content: center;
-          align-items: center;
-          font-family: "Montserrat", sans-serif;
-          font-size: large;
-      
-      }
-      button[type="submit"] {
-        color: white;
-    height: 60px;
-    width: 250px;
-    background-color: #5D3FD3;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-    }
-    
-    button[type="submit"]:hover {
-        color: #5D3FD3;
-    height: 60px;
-    width: 250px;
-    background-color: white;
-    font-size: 20px;
-    margin-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-    margin-right: auto;
-    cursor: pointer;
-    font-family: "Montserrat", sans-serif;
-    border-radius: 24px;
-    transition-duration: 0.4s;
-    border:0cm
-    }
-    .footer {
-      position: fixed;
-      padding: 10px 10px 0px 10px;
-      bottom: 0;
-      width: 100%;
-      /* Height of the footer*/
-      height: 40px;
-      background: black;
-      color: white;
-      font-family: "Montserrat", sans-serif;
-      text-align: center;
-  }
+            justify-content: center;
+            align-items: center;
+            margin: 10% auto;
+            width: 100%;
+            height: 60%;
+            background-color: #1f74cc;
+            border-radius: 20px;
+            font-size: 20px;
+            color: white;
+            border: none;
+            transition-duration: 0.4s;
+            font-family: "Montserrat", sans-serif;
+        }
+        button:hover {
+            height: 61%;
+            width: auto + 1%;
+            color:#1f74cc;
+            background-color: white;
+        }
+        .footer {
+            width: 40%;
+            height: 5%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
 
-  ::-webkit-input-placeholder {
-    text-align: center;
-  }
-  
-  :-moz-placeholder {
-    text-align: center;
-  }
-  :-ms-input-placeholder {  
-    text-align: center; 
- }
+        @media screen and (max-width: 426px) {
+            .message {
+                width: 70%;
+            }
 
-        </style>
-        
-        </head>
-        <body>
-            <h1><%= cloudname %></h1>
-            <h2>Upload & Download your files!</h2>
-            <h3><%- message %> </h3>
-            <form action="/">
-            <button type="submit" href="/"><%= lang["Back"] %></button>
-            </form>
-            <footer>
-                     <div class="footer"><%= cloudname %> © 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></div>
-        
-        </footer>
-        </body>
-        </html>
+            select {
+                width: 80%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
+  </style>
+  <div class="flex-container">
+    <div class="message">
+      <h1><%= cloudname %></h1>
+      <p><%- message %></p>
+    </div>
+    <form action="/">
+      <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;Back to home page</button>
+    </form>
+  </div>
+  <div class="footer">
+    <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
+</div>
+</body>
+</html>
