--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
         .login {
             width: 35%;
             height: 45%;
-            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            background-color: #111111;
             border-radius: 50px;
             align-items: center;
             justify-content: center;
@@ -60,6 +60,7 @@
             padding-left: 2%;
             margin-top: 1%;
             margin-bottom: 1%;
+            background-color: #999999;
         }
 
        form {
