--- a/views/index.ejs
+++ b/views/index.ejs
@@ -27,7 +27,7 @@
         .upload {
             width: 35%;
             height: 50%;
-            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            background-color: #111111;
             border-radius: 50px;
             align-items: center;
             justify-content: center;
