--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -27,7 +27,7 @@
         .files {
             width: auto;
             height: auto;
-            background-image: linear-gradient(to left top, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);            
+            background-color: #111111;
             border-radius: 50px;
             padding-bottom: 2%;
             padding-right: 1%;
@@ -81,11 +81,11 @@
             border-collapse: collapse;
             margin-left: auto;
             margin-right: auto;
-            border: 2px solid #1f74cc;
+            border: 2px solid #555555;
         }
 
         td, th {
-            border: 2px solid #1f74cc;
+            border: 2px solid #555555;
             padding: 8px;
             text-align: center;
             color: #1f74cc;
