back buttons fixed

--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -225,7 +225,7 @@
           </table>
         </div>
         <form action="/">
-          <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;Back to home page</button>
+          <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;<%= lang["Back"] %></button>
         </form>
     </div>
     <div class="footer">
