--- a/views/message.ejs
+++ b/views/message.ejs
@@ -102,7 +102,7 @@
       <p><%- message %></p>
     </div>
     <form action="/">
-      <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;Back to home page</button>
+      <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;<%= lang["Back"] %></button>
     </form>
   </div>
   <div class="footer">
