footer added to profile

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -88,6 +88,18 @@
             background-color: white;
         }
 
+        .footer {
+            width: 40%;
+            height: 5%;
+            background-color: black;
+            border-radius: 50px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: auto;
+            color: white;
+            font-family: 'Montserrat', sans-serif;
+        }
     </style>
     <div class="flex-container">
         <div class="profile">
@@ -133,6 +145,9 @@
         <form action="/">
             <button type="submit"><i class="fa-solid fa-arrow-left-long"></i>&nbsp;<%= lang["Back"] %></button>
           </form>
+    </div>
+    <div class="footer">
+        <p><%= cloudname %> ©️ 2022 - 2023 | Developed by <a href="https://github.com/DaneeSkripter">DaneeSkripter</a></p>
     </div>
 </body>
 </html>
