mobile support added

--- a/views/message.ejs
+++ b/views/message.ejs
@@ -84,6 +84,7 @@
         @media screen and (max-width: 426px) {
             .message {
                 width: 70%;
+                height: auto;
             }
 
             select {
