--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -100,6 +100,28 @@
             color: white;
             font-family: 'Montserrat', sans-serif;
         }
+
+        @media screen and (max-width: 426px) {
+            .profile {
+                width: 70%;
+                height: 45%;
+            }
+            .profile > form > label {
+                width: 80%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+            td, th {
+                font-size: 9.5px;
+            }
+            img {
+                width: 25px;
+            }
+
+        }
     </style>
     <div class="flex-container">
         <div class="profile">
