--- a/views/rename.ejs
+++ b/views/rename.ejs
@@ -107,6 +107,18 @@
             text-decoration: none;
             background-color: transparent;
         }
+
+        @media screen and (max-width: 426px) {
+            .rename {
+                width: 70%;
+                height: 25%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
     <div class="flex-container">
         <div class="rename">
