--- a/views/verify.ejs
+++ b/views/verify.ejs
@@ -93,6 +93,20 @@
             color: white;
             font-family: 'Montserrat', sans-serif;
         }
+
+        @media screen and (max-width: 426px) {
+            .verify {
+                width: 90%;
+                height: 30%;
+            }
+            button {
+                font-size: 15px;
+            }
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
     <div class="flex-container">
         <div class="verify">
