--- a/views/verifycode.ejs
+++ b/views/verifycode.ejs
@@ -107,6 +107,17 @@
             text-decoration: none;
             background-color: transparent;
         }
+        @media screen and (max-width: 426px) {
+            .verify {
+                width: 90%;
+                height: 35%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
     <div class="flex-container">
         <div class="verify">
