--- a/views/myfiles.ejs
+++ b/views/myfiles.ejs
@@ -130,8 +130,8 @@
         }
         @media screen and (max-width: 426px) {
             .files {
-                width: 70%;
-                height: 45%;
+                width: auto;
+                height: auto;
             }
 
             .footer {
@@ -139,6 +139,13 @@
                 font-size: 12px;
             }
             
+            td, th {
+              font-size: 10px;
+            }
+
+            img {
+              width: 25px;
+            }
         }
     </style>
         <script>
