--- a/views/editrole.ejs
+++ b/views/editrole.ejs
@@ -105,6 +105,18 @@
             text-decoration: none;
             background-color: transparent;
         }
+
+        @media screen and (max-width: 426px) {
+            .editrole {
+                width: 90%;
+                height: 35%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
     </style>
     <div class="flex-container">
         <div class="editrole">
