fixed width and height

--- a/views/video.ejs
+++ b/views/video.ejs
@@ -12,8 +12,9 @@
 
   body {
     background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
-    width: 98vw;
-    height: 98vh;
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
   }
 
   .flex-container {
@@ -71,7 +72,7 @@
         }
         .footer {
             width: 40%;
-            height: 5%;
+            height: 3%;
             background-color: black;
             border-radius: 50px;
             display: flex;
