--- a/views/message.ejs
+++ b/views/message.ejs
@@ -11,8 +11,9 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
         body {
             background-image: linear-gradient(to right bottom, #1f74cc, #3c7ed1, #5087d6, #6291db, #729be0, #87a6e4, #9ab1e9, #acbced, #c5cbf1, #dadcf5, #eeedfa, #ffffff);
-            width: 98vw;
-            height: 98vh;
+            width: 100vw;
+            height: 100vh;
+            margin: 0;
         }
         .flex-container {
             display: flex;
@@ -70,7 +71,7 @@
         }
         .footer {
             width: 40%;
-            height: 5%;
+            height: 3%;
             background-color: black;
             border-radius: 50px;
             display: flex;
