--- a/views/verifycode.ejs
+++ b/views/verifycode.ejs
@@ -20,15 +20,15 @@
         .flex-container {
             display: flex;
             width: 100%;
-            height: 85%;
+            height: 96%;
             flex-flow: column nowrap;
             justify-content: center;
             align-items: center;
         }
 
         .verify {
-            width: 35%;
-            height: 35%;
+            width: 20%;
+            height: 20%;
             background-color: #111111;
             border-radius: 50px;
             align-items: center;
@@ -108,6 +108,20 @@
             text-decoration: none;
             background-color: transparent;
         }
+        /* Laptop support */
+        @media screen and (max-width: 1825px) {
+            .verify {
+                width: 35%;
+                height: 25%;
+            }
+            .footer {
+                height: 5%;
+            }
+            .flex-container {
+                height: 94%;
+            }
+        }
+        /* Mobile support */
         @media screen and (max-width: 426px) {
             .verify {
                 width: 90%;
