--- a/views/delrole.ejs
+++ b/views/delrole.ejs
@@ -20,15 +20,15 @@
         .flex-container {
             display: flex;
             width: 100%;
-            height: 95%;
+            height: 96%;
             flex-flow: column nowrap;
             justify-content: center;
             align-items: center;
         }
 
         .delrole {
-            width: 35%;
-            height: 25%;
+            width: 20%;
+            height: 20%;
             background-color: #111111;
             border-radius: 50px;
             padding-bottom: 2%;
@@ -106,7 +106,20 @@
             text-decoration: none;
             background-color: transparent;
         }
-
+        /* Laptop support */
+        @media screen and (max-width: 1825px) {
+            .delrole {
+                width: 35%;
+                height: 30%;
+            }
+            .footer {
+                height: 5%;
+            }
+            .flex-container {
+                height: 94%;
+            }
+        }
+        /* Mobile support */
         @media screen and (max-width: 426px) {
             .delrole {
                 width: 90%;
