--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -187,6 +187,17 @@
             color: white;
             font-family: 'Montserrat', sans-serif;
         }
+        @media screen and (max-width: 426px) {
+            .admin {
+                width: 95%;
+                height: 25%;
+            }
+
+            .footer {
+                width: 100%;
+                font-size: 12px;
+            }
+        }
   </style>
   <div class="flex-container">
     <div class="admin">
